# zero-copy-pads

./: Cargo.toml  README.md  test.sh
.github/workflows/: test.yaml
src/: alignment.rs  column.rs  direction.rs  excess.rs  item.rs  lib.rs  pad.rs  shortcuts.rs  unit.rs  value.rs  width.rs
tests/: align_center.rs  column.rs  column_len.rs  excess_handler_presets.rs  value.rs  width.rs
