[package]
name = "zero-copy-pads"
description = "Padding/aligning values without heap allocation"
version = "0.2.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/zero-copy-pads"
repository = "https://github.com/KSXGitHub/zero-copy-pads"
categories = [
  "algorithms",
  "no-std",
]
keywords = [
  "zero-copy",
  "padding",
  "alignment",
  "column",
  "string",
]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[features]
default = ["std"]
std = ["derive_builder/std"]

[dependencies]
derive_more = "^0.99.17"
fmt-iter = "^0.2.1"
unicode-width = "^0.1.9"

[dependencies.derive_builder]
version = "^0.12.0"
features = []

[dev-dependencies]
pretty_assertions = "^0.7.2"
pipe-trait = "^0.3.2"
